--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Palindrome Birthday</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   
 </body>
+<script>
+
+  function reverse(str){
+    var charList = str.split("");
+    var reverseList = charList.reverse();
+    var reversedStr = reverseList.join("");
+
+    return reversedStr;
+  }
+
+  console.log(reverse("Aritra"));
+
+</script>
 </html>
