--- a/index.html
+++ b/index.html
@@ -28,7 +28,34 @@
     return false;
   }
 
-  console.log(checkPalindrome("Racecar"));
+  function dateToStr(date){
+    var dateStr = {
+      day:'',
+      month:'',
+      year:''
+    }
+     if(date.day < 10){
+       dateStr.day = '0'+ date.day;
+     }else {
+       dateStr.day = date.day.toString();
+     }
+     if(date.month <10){
+       dateStr.month = '0'+ date.month;
+     }else{
+       dateStr.month = date.month.toString();
+     }
+     dateStr.year = date.year.toString();
+
+    return dateStr;
+  }
+
+  var date = {
+    day:1,
+    month:9,
+    year:2021
+  };
+
+  console.log(dateToStr(date));
 
 </script>
 </html>
