All Date formats

--- a/index.html
+++ b/index.html
@@ -55,7 +55,19 @@
     year:2021
   };
 
-  console.log(dateToStr(date));
+  function getAllDateFormats(date){
+    var dateStr = dateToStr(date);
+    var ddmmyyyy = dateStr.day + dateStr.month + dateStr.year;
+    var mmddyyyy = dateStr.month + dateStr.day + dateStr.year;
+    var yyyymmdd = dateStr.year + dateStr.month + dateStr.day;
+    var ddmmyy = dateStr.day + dateStr.month + dateStr.year.slice(-2);
+    var mmddyy = dateStr.month + dateStr.day + dateStr.year.slice(-2);
+    var yymmdd = dateStr.year.slice(-2) + dateStr.month + dateStr.day;
+
+    return [ddmmyyyy, ddmmyyyy , yyyymmdd , ddmmyy , mmddyy , yymmdd];
+  }
+
+  console.log(getAllDateFormats(date));
 
 </script>
 </html>
