--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <nav class="nav-bar">
+    <div class ="nav-heading">IAmDeveloper</div> 
+    <ul class="nav-pills">
+      <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/project.html" target="_blank">projects</a></li>
+      <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/about.html" target="_blank">about</a></li>
+    </ul>
+  </nav>
   <div class="container">
     <h1 class="heading">Palindrome Birthday</h1>
     <label for="date-input">Enter Birthday</label>
@@ -19,6 +26,17 @@
     <p class="output"></p>
     
   </div>
+
+  <footer class="footer">
+    <p class="footer-header">connect to me</p>
+    <ul class="footer-pills">
+    <li class="footer-items"><a class="footer-link" href="https://github.com/Aritra-art" target="_blank"><img src="./images/github.svg" ></a></li>
+    <li class="footer-items"><a href="https://twitter.com/Raj_chowdhury10" target="_blank"><img src="./images/twitter.svg" ></a></li>
+    <li class="footer-items"><a href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/" target="_blank"><img src="./images/linkedin.svg" ></a></li>
+    <li class="footer-items"><a href="https://t.me/Aritra_chowdhury" target="_blank"><img src="./images/telegram.svg" ></a></li>
+    </ul>
+    <p class="privacy">© 2022 | <a class="name"href="https://aritraportfolio.netlify.app/" target="_blank">aritrachowdhury</a></p>
+  </footer>
   
 </body>
 <script>
