--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Palindrome Birthday</title>
+  <link rel="shortcut icon" href="./images//favicon.png" type="image/png">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -15,6 +16,7 @@
       <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/about.html" target="_blank">about</a></li>
     </ul>
   </nav>
+
   <div class="container">
     <h1 class="heading">Palindrome Birthday🍰</h1>
     <label for="date-input">Enter Birthday</label>
