--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,39 +9,54 @@
   <link rel="shortcut icon" href="./images//favicon.png" type="image/png">
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <nav class="nav-bar">
-    <div class ="nav-heading">IAmDeveloper</div> 
+    <div class="nav-heading">IAmDeveloper</div>
     <ul class="nav-pills">
-      <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/project.html" target="_blank">projects</a></li>
-      <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/about.html" target="_blank">about</a></li>
+      <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/project.html"
+          target="_blank">projects</a></li>
+      <li class="nav-pill-items"> <a class="link" href="https://aritraportfolio.netlify.app/about.html"
+          target="_blank">about</a></li>
     </ul>
   </nav>
 
   <div class="container">
+    <img src="./images/baloons.gif" alt="not found"
+      style="height: 60%; width:60% ;display:flex; align-items: center; justify-content: center;margin: auto;">
     <h1 class="heading">Palindrome Birthday🍰</h1>
     <label for="date-input">Enter Birthday</label>
-    <input type="date" id="date-input" >
+    <input type="date" id="date-input">
     <span class="button">
       <button class="check">Check Now</button>
       <button class="clear">Clear</button>
     </span>
     <p class="error"></p>
-    <p class="output"></p>
-    
+    <p class="output" style="font-weight: bold; font-size:2rem;"></p>
+    <img src="./images/loading-love.gif" alt="not found"
+      style="height: 15%; width:15%; display:flex; align-items: center; justify-content: center;margin: auto;"
+      id="loader">
+
+
   </div>
 
   <footer class="footer">
     <p class="footer-header">connect to me</p>
     <ul class="footer-pills">
-    <li class="footer-items"><a class="footer-link" href="https://github.com/Aritra-art" target="_blank"><img src="./images/github.svg" ></a></li>
-    <li class="footer-items"><a href="https://twitter.com/Raj_chowdhury10" target="_blank"><img src="./images/twitter.svg" ></a></li>
-    <li class="footer-items"><a href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/" target="_blank"><img src="./images/linkedin.svg" ></a></li>
-    <li class="footer-items"><a href="https://t.me/Aritra_chowdhury" target="_blank"><img src="./images/telegram.svg" ></a></li>
+      <li class="footer-items"><a class="footer-link" href="https://github.com/Aritra-art" target="_blank"><img
+            src="./images/github.svg"></a></li>
+      <li class="footer-items"><a href="https://twitter.com/Raj_chowdhury10" target="_blank"><img
+            src="./images/twitter.svg"></a></li>
+      <li class="footer-items"><a href="https://www.linkedin.com/in/aritra-chowdhury-b95a66227/" target="_blank"><img
+            src="./images/linkedin.svg"></a></li>
+      <li class="footer-items"><a href="https://t.me/Aritra_chowdhury" target="_blank"><img
+            src="./images/telegram.svg"></a></li>
     </ul>
-    <p class="privacy">© 2022 | <a class="name"href="https://aritraportfolio.netlify.app/" target="_blank">aritrachowdhury</a></p>
+    <p class="privacy">© 2022 | <a class="name" href="https://aritraportfolio.netlify.app/"
+        target="_blank">aritrachowdhury</a></p>
   </footer>
-  
+
 </body>
 <script src="./app.js"></script>
+
 </html>
